improved spacing, fixed headers, fixed project page router, fixed nav bar

--- a/docs/src/components/css/Content.css
+++ b/docs/src/components/css/Content.css
@@ -65,6 +65,9 @@
 .content-2-img {
   margin-left: 100px;
   padding-right: 50px;
+  margin-right:-50px;
+
+
   /* shape-outside: polygon(0 0, 0 20px, 30px 60px);
   height: 20px; */
   /* float: left; */
@@ -305,8 +308,8 @@ img {
       font-size: 50px;
       font-weight: 800;
       background-color: white;
-      display: inline;
-      background: linear-gradient(to top, #D2716E 41%, white 40%);
+      /* display: inline;
+      background: linear-gradient(to top, #D2716E 41%, white 40%); */
     }
   
     p {
